...
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_nav"
    app:startDestination="@id/calculator_dest"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/calculator_dest"
        android:name="com.insiderser.android.calculator.ui.calculator.CalculatorFragment"
        tools:layout="@layout/calculator_fragment">
...
