...
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/button_backspace"
            style="@style/Widget.Calculator.Numpad.Button"
            android:contentDescription="@string/calculator_numpad_backspace"
            android:src="@drawable/ic_backspace" />

        <TextView
            android:id="@+id/button_divide"
...
