<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/clear_all"
        android:title="@string/history_clear_all"
        app:showAsAction="never" />
</menu>
