...
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:orientation="vertical"
    android:padding="@dimen/history_item_padding">

    <TextView
        android:id="@+id/expression"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:textAppearance="?attr/textAppearanceHeadline5"
        tools:text="5*tanπ" />
...
